# CardioTrack

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  prometheus.yml  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  pynblint.yml  pytestAndGX.yml  ruff-linter.yml
data/: .gitignore  README.md
docs/: CardioTrack_ML_Canvas.md  Developer_Guide.md  README.md  Risk_Classification.md  mkdocs.yml
docs/docs/: index.md
grafana/dashboards/: cardiotrack-dashboard.json
grafana/provisioning/dashboards/: dashboards.yaml
locust/: Dockerfile  locustfile.py
metrics/test/all/: .gitignore
models/: .gitignore  README.md
models/nosex/: .gitignore
notebooks/: 1.0-mc-initial-data-exploration.ipynb  bad.ipynb  ok.ipynb
predicting_outcomes_in_heart_failure/: __init__.py  config.py  dataset.py  features.py  inference.py  plots.py  preprocess.py  split_data.py
predicting_outcomes_in_heart_failure/app/: entrypoint.sh  main.py  monitoring.py  schema.py  utils.py  wrapper.py
predicting_outcomes_in_heart_failure/app/deepchecks_monitoring/: drift_runner.py  production_data_collector.py  scheduler.py
predicting_outcomes_in_heart_failure/app/routers/: cards.py  general.py  model_info.py  prediction.py
predicting_outcomes_in_heart_failure/data/: dataset.py  preprocess.py  split_data.py
predicting_outcomes_in_heart_failure/modeling/: evaluate.py  explainability.py  predict.py  train.py
reports/: .gitignore  README.md
reports/all/: .gitignore
reports/deepchecks_data_drift_reports/: drift_result_2026-01-10_11-10-05.json  drift_result_2026-01-10_16-30-14.json
reports/great_expectations_reports/: heart_data_source_processed.html  heart_data_source_raw.html
reports/locust_reports/: Locust_10persons_30minutes.html  Locust_5000persons_16minutes.html
reports/pytest_report/: pytest_report.html
tests/: test_data.py
tests/test_behavioral_model/: directional_test.py  invariance_test.py  minimum_functionality_test.py
tests/test_data/: gx_util.py  test_data_processed.py  test_data_raw.py
tests/test_heart_data/: processed_test.py  raw_test.py  util.py
tests/test_predicting_outcomes_in_heart_failure/app/: schema_test.py
tests/test_predicting_outcomes_in_heart_failure/app/routers/: general_test.py  model_info_test.py  prediction_test.py
tests/test_predicting_outcomes_in_heart_failure/data/: preprocess_test.py  split_data_test.py
tests/test_predicting_outcomes_in_heart_failure/modeling/: conftest.py  test_evaluate.py  test_explainability.py  test_predict.py  test_train.py
